--- a/style.css
+++ b/style.css
@@ -5,3 +5,45 @@
 .img1 {
    height: 676px;
 }
+
+.popup {
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background-color: #111213be;
+   top: 0;
+   left: 0;
+}
+
+.popup__body {
+   display: flex;
+   min-height: 100%;
+   align-items: center;
+   justify-content: center;
+   padding: 30px 10px;
+}
+
+.popup__content {
+   background-color: white;
+   color: black;
+   max-width: 800px;
+   padding: 30px;
+   position: relative;
+}
+
+.popup__close {
+   position: absolute;
+   right: 10px;
+   top: 10px;
+   font-size: 20px;
+   color: black;
+   text-decoration: none;
+}
+
+.popup__tittle {
+   font-size: 30px;
+   margin-bottom: 10px;
+}
+
+.popup__text {}
+
