--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@
    height: 676px;
 }
 
+.logo {
+   width: 50px;
+}
+
+.collapse {
+   display: flex!important;
+   flex-basis: auto;
+   flex-direction: row-reverse !important;
+}
+
 .popup {
    position: fixed;
    width: 100%;
@@ -13,6 +23,8 @@
    background-color: #111213be;
    top: 0;
    left: 0;
+   opacity: 0;
+   visibility: hidden;
 }
 
 .popup__body {
