--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@
    width: 50px;
 }
 
+.lock-padding {
+   position: fixed;
+   left: 0;
+   top: 0;
+   width: 100%;
+}
+
 .collapse {
    display: flex!important;
    flex-basis: auto;
@@ -25,6 +32,20 @@
    left: 0;
    opacity: 0;
    visibility: hidden;
+}
+
+.popup-area {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+
+}
+
+.popup:target {
+   opacity: 1;
+   visibility: visible;
 }
 
 .popup__body {
