Update style css for gallery html

--- a/style.css
+++ b/style.css
@@ -79,7 +79,29 @@
    margin-bottom: 10px;
 }
 
-.container {
-   
+.gallery {
+   box-sizing: border-box;
+   position: relative;
+   padding: 45px 0;
+}
+
+h2.title {
+   font-size: 44px;
+   font-weight: bold;
+   text-align: center;
+   padding-bottom: 45px;
+   position: relative;
+}
+
+h2.title:after {
+   content: "";
+   position: absolute;
+   width: 100px;
+   height: 3px;
+   background-color: #111111;
+   bottom: 20px;
+   left: 50%;
+   transform: translateX(-50%);
+
 }
 
