--- a/style.css
+++ b/style.css
@@ -169,3 +169,50 @@ h2.title:after {
       flex: 100%;
    }
 }
+
+.image-slider {
+   padding: 30px 0 70px;
+}
+
+.image-slider__wrapper {
+
+}
+
+.image-slider__slide {
+
+}
+
+.image-slider__image {
+   text-align: center;
+}
+
+.image-slider__image img {
+   max-width: 100%;
+}
+
+.swiper-container {
+   margin-left: auto;
+   margin-right: auto;
+   position: relative;
+   overflow: hidden;
+   list-style: none;
+   z-index: 1;
+}
+
+.swiper {
+   width: 100%;
+   height: 100%;
+}
+
+.swiper-slide {
+   text-align: center;
+   font-size: 18px;
+   background: #fff;
+}
+
+.swiper-slide img {
+   display: block;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
