--- a/style.css
+++ b/style.css
@@ -199,20 +199,42 @@ h2.title:after {
    z-index: 1;
 }
 
+
 .swiper {
    width: 100%;
-   height: 100%;
+   padding-top: 50px;
+   padding-bottom: 50px;
 }
 
 .swiper-slide {
-   text-align: center;
-   font-size: 18px;
-   background: #fff;
+background-position: center;
+background-size: cover;
+width: 300px;
+height: 300px;
 }
 
 .swiper-slide img {
-   display: block;
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
+display: block;
+width: 100%;
+}
+
+@media (max-width: 991px) {
+   .swiper-slide {
+      width: 33.3%;
+      padding-bottom: 10px;
+   }
+}
+
+@media (max-width: 768px) {
+   .swiper-slide {
+      width: 50%;
+      padding-bottom: 10px;
+   }
+}
+
+@media (max-width: 530px) {
+   .swiper-slide {
+      width: 100%;
+      padding-bottom: 10px;
+   }
 }
